--- a/about-us.html
+++ b/about-us.html
@@ -246,67 +246,48 @@
   </div>
 </div>
 <!-- about-intensy-area end -->
-<!-- our-skill-area start -->
-<div class="our-skill-area fix">
-  <div class="container">
-    <!-- section-heading start -->
-    <div class="row">
-      <div class="col-md-12">
-        <div class="section-heading">
-          <h3>НАШИ <strong>УМЕНИЯ</strong></h3>
-        </div>
-      </div>
-    </div>
-    <!-- section-heading end -->
-    <div class="row">
-      <!-- single-skill start -->
-      <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-        <div class="single-skill">
-          <div class="progress-circular">
-            <input type="text" class="knob" value="0" data-rel="75" data-linecap="round" data-width="175"
-                   data-bgcolor="#444444" data-fgcolor="#338da8" data-thickness=".10" data-readonly="true" disabled>
-            <h4 class="progress-h4">Первое</h4>
+<!-- counter-area start -->
+<div class="home-4">
+  <div class="counter-area fix">
+    <div class="container">
+      <div class="row">
+        <!-- single-counter start -->
+        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+          <div class="single-counter">
+            <h2 class="counter">12798</h2>
+            <h3>АВТОМОБИЛЕЙ ПЕРЕВЕЗЕНО</h3>
           </div>
         </div>
-      </div>
-      <!-- single-skill end -->
-      <!-- single-skill start -->
-      <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-        <div class="single-skill">
-          <div class="progress-circular">
-            <input type="text" class="knob" value="0" data-rel="75" data-linecap="round" data-width="175"
-                   data-bgcolor="#444444" data-fgcolor="#338da8" data-thickness=".10" data-readonly="true" disabled>
-            <h4 class="progress-h4">Второе</h4>
+        <!-- single-counter end -->
+        <!-- single-counter start -->
+        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+          <div class="single-counter">
+            <h2 class="counter">8</h2>
+            <h3>ЛЕТ РАБОТЫ</h3>
           </div>
         </div>
-      </div>
-      <!-- single-skill end -->
-      <!-- single-skill start -->
-      <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-        <div class="single-skill">
-          <div class="progress-circular">
-            <input type="text" class="knob" value="0" data-rel="95" data-linecap="round" data-width="175"
-                   data-bgcolor="#444444" data-fgcolor="#338da8" data-thickness=".10" data-readonly="true" disabled>
-            <h4 class="progress-h4">Третье</h4>
+        <!-- single-counter end -->
+        <!-- single-counter start -->
+        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+          <div class="single-counter">
+            <h2 class="counter">1546</h2>
+            <h3>ПОСТОЯННЫХ КЛИЕНТОВ</h3>
           </div>
         </div>
-      </div>
-      <!-- single-skill end -->
-      <!-- single-skill start -->
-      <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-        <div class="single-skill">
-          <div class="progress-circular">
-            <input type="text" class="knob" value="0" data-rel="55" data-linecap="round" data-width="175"
-                   data-bgcolor="#444444" data-fgcolor="#338da8" data-thickness=".10" data-readonly="true" disabled>
-            <h4 class="progress-h4">Четвертое</h4>
+        <!-- single-counter end -->
+        <!-- single-counter start -->
+        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+          <div class="single-counter">
+            <h2 class="counter">15</h2>
+            <h3>МЕНЕДЖЕРОВ</h3>
           </div>
         </div>
+        <!-- single-counter end -->
       </div>
-      <!-- single-skill end -->
     </div>
   </div>
 </div>
-<!-- our-skill-area end -->
+<!-- counter-area end -->
 <!-- creative-member-area start -->
 <div class="about-member-area  fix">
   <div class="container">
