--- a/about-us.html
+++ b/about-us.html
@@ -224,7 +224,7 @@
 <div class="about-intensy-area">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-6">
+      <div class="col-xs-12 col-sm-6 col-md-6 col-sm-offset-3 col-md-offset-3">
         <div class="about-intensy-text">
           <h1 class="about-intensy-title">Добро пожаловать в <strong>GTrans</strong></h1>
           <p>Мы считаем, что качественные услуги во всех областях должны быть доступны каждому, в том числе и в вопросах перевозок. На деле же выбор хорошей транспортной компании может затянуться буквально на целую вечность. Где-то отзывы негативные или их вообще нет, эта компания на грани банкротства и с ней не стоит связываться, иной же раз без слёз невозможно смотреть на автопарк - настолько он уставший и негодный к эксплуатации. </p>
@@ -235,11 +235,6 @@
             <li>Команду профессионалов с большим опытом работы</li>
             <li>Строгое соблюдение сроков и договорённостей</li>
           </ul>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-6">
-        <div class="about-intensy-img">
-          <img src="img/about/team30.jpg" alt=""/>
         </div>
       </div>
     </div>
@@ -291,7 +286,7 @@
 
 <!-- newsletter-area start -->
 <div class="newsletter-area">
-  <h2>САМОЕ ВРЕМЯ ПЕРЕЗАГРУЗИТЬ <strong>ВАШУ</strong> КОМПАНИЮ</h2>
+  <h2>БЕРЕЖНОЕ ОТНОШЕНИЕ <strong>К ВАШЕМУ</strong> АВТОМОБИЛЮ</h2>
 </div>
 <!-- newsletter-area end -->
 <!-- testimonial-area start -->
