--- a/index-4.html
+++ b/index-4.html
@@ -286,7 +286,8 @@
                data-elementdelay="0.1"
                data-endelementdelay="0.1"
                style="z-index: 11; max-width: auto; max-height: auto; white-space: nowrap;"><a href='#about-company'
-                                                                                               class='readon border large white'>Узнать больше</a>
+                                                                                               class='readon border large white'>Узнать
+            больше</a>
           </div>
         </li>
         <li data-transition="random" data-slotamount="7" data-masterspeed="300" data-thumb="img/slider/slider-4/bg1.jpg"
@@ -370,7 +371,8 @@
                data-elementdelay="0.1"
                data-endelementdelay="0.1"
                style="z-index: 11; max-width: auto; max-height: auto; white-space: nowrap;"><a href='#about-company'
-                                                                                               class='readon border large white'>Узнать больше</a>
+                                                                                               class='readon border large white'>Узнать
+            больше</a>
           </div>
         </li>
       </ul>
@@ -384,14 +386,23 @@
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-6">
         <div class="service-dev-img">
-          <img src="img/slider/slider-1/1.jpg" alt="" />
+          <img src="img/slider/slider-1/1.jpg" alt=""/>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6">
         <div class="service-dev-text">
           <h2>ПЕРЕВОЗКА <strong>АВТОМОБИЛЕЙ</strong></h2>
-          <p>Процесс перевозки транспортных средств по дорогам общего пользования на специализированных прицепах и грузовиках-автовозах требует от компании серьёзной подготовки и знания всех тонкостей оказания такого рода услуг. Перевозчики с небольшим опытом или без такогового вообще часто не могут правильно организовать весь процесс, что приводит к срыву сроков доставки. Поэтому мы рекомендуем обращаться только к проверенным профессионалам. </p>
-          <p>Компания GTrans же более 8 лет занимается перевозками самого разнообразного траснпорта. За это время специалисты компании приобрели бесценный опыт, который нельзя заменить ни новейшими прицепами, ни красивым офисом. Безусловно, эти составляющие также играют роль - именно поэтому мы озаботились приобретением только современных транспортных средств и прицепов ведущих мировых производителей. А посетив наш офис, вы поймёте, что вполне возможно сочетать все преимущества, полностью избавившись от недостатков. Первоклассный сервис, гибкая тарифная политика и строгое соблюдение договорённостей не оставят вас равнодушными. </p>
+          <p>Процесс перевозки транспортных средств по дорогам общего пользования на специализированных прицепах и
+            грузовиках-автовозах требует от компании серьёзной подготовки и знания всех тонкостей оказания такого рода
+            услуг. Перевозчики с небольшим опытом или без такогового вообще часто не могут правильно организовать весь
+            процесс, что приводит к срыву сроков доставки. Поэтому мы рекомендуем обращаться только к проверенным
+            профессионалам. </p>
+          <p>Компания GTrans же более 8 лет занимается перевозками самого разнообразного траснпорта. За это время
+            специалисты компании приобрели бесценный опыт, который нельзя заменить ни новейшими прицепами, ни красивым
+            офисом. Безусловно, эти составляющие также играют роль - именно поэтому мы озаботились приобретением только
+            современных транспортных средств и прицепов ведущих мировых производителей. А посетив наш офис, вы поймёте,
+            что вполне возможно сочетать все преимущества, полностью избавившись от недостатков. Первоклассный сервис,
+            гибкая тарифная политика и строгое соблюдение договорённостей не оставят вас равнодушными. </p>
           <p></p>
           <p></p>
           <a class="readon border black" href="#features">Наши преимущества</a>
@@ -460,7 +471,8 @@
           <div class="section-title-4">
             <h2><strong>НАШИ</strong> ВОЗМОЖНОСТИ</h2>
           </div>
-          <p>Мы перевозим любые типы транспортных средств: легковые, грузовые, коммерческие, двухколёсные и даже водные. </p>
+          <p>Мы перевозим любые типы транспортных средств: легковые, грузовые, коммерческие, двухколёсные и даже
+            водные. </p>
         </div>
       </div>
     </div>
@@ -593,8 +605,8 @@
       </div>
     </div>
     <!-- awesome-portfolio end -->
-    </div>
   </div>
+</div>
 </div>
 <!-- features-area end -->
 
@@ -664,7 +676,8 @@
           <div class="section-title-4">
             <h2><strong>НАШИ </strong>РАБОТЫ</h2>
           </div>
-          <p>За долгие годы работы мы накопили огромное количество опыта и несколько фотографий, которые рады представить вам</p>
+          <p>За долгие годы работы мы накопили огромное количество опыта и несколько фотографий, которые рады
+            представить вам</p>
         </div>
       </div>
     </div>
@@ -754,7 +767,10 @@
     </a>
     <div class="latest-blog-info">
       <h3><a href="#">Перевозка мото и водного транспорта</a></h3>
-      <p>Возможности нашей компании не ограничиваются транспортировкой автомобилей, мы также поможем вам перевезти любой вид транспорта, будь то мотоцикл, квадроцикл, моторная лодка, катер, огромная яхта или даже вертолёт. В нашем распоряжении все необходимые технические средства для правилього закрепления груза на платформе прицепа, а значит транспортировка пройдёт максимально безопасно. </p>
+      <p>Возможности нашей компании не ограничиваются транспортировкой автомобилей, мы также поможем вам перевезти любой
+        вид транспорта, будь то мотоцикл, квадроцикл, моторная лодка, катер, огромная яхта или даже вертолёт. В нашем
+        распоряжении все необходимые технические средства для правилього закрепления груза на платформе прицепа, а
+        значит транспортировка пройдёт максимально безопасно. </p>
     </div>
   </div>
   <!-- top blog end -->
@@ -766,7 +782,10 @@
     </a>
     <div class="latest-blog-info">
       <h3><a href="#">Отслеживание</a></h3>
-      <p>Глобальные системы позиционирования прочно заняли свое место в области автотранспорта - без них не обходится сейчас, пожалуй, ни одна область этого бизнеса. Отслеживание грузов позволяет всегда быть в курсе событий и точно знать дату прибытия груза к месту назначения. Наша компания использует все самые передовые технологии в области позиционирования - на данный момент ключевыми системами являются GPS и ГЛОНАСС. </p>
+      <p>Глобальные системы позиционирования прочно заняли свое место в области автотранспорта - без них не обходится
+        сейчас, пожалуй, ни одна область этого бизнеса. Отслеживание грузов позволяет всегда быть в курсе событий и
+        точно знать дату прибытия груза к месту назначения. Наша компания использует все самые передовые технологии в
+        области позиционирования - на данный момент ключевыми системами являются GPS и ГЛОНАСС. </p>
     </div>
   </div>
   <div class="latest-blog-desc">
@@ -776,7 +795,9 @@
     </a>
     <div class="latest-blog-info">
       <h3><a href="#">Страхование</a></h3>
-      <p>Для уверенности в полной сохранности отправления вы можете оформить страховой полис, покрывающий все возможные риски, возникающие при транспортировке. Наши специалисты помогут вам правильно подобрать программу страхования, рассчитают тарифы и подготовят необходимый комплект документов. </p>
+      <p>Для уверенности в полной сохранности отправления вы можете оформить страховой полис, покрывающий все возможные
+        риски, возникающие при транспортировке. Наши специалисты помогут вам правильно подобрать программу страхования,
+        рассчитают тарифы и подготовят необходимый комплект документов. </p>
     </div>
   </div>
   <!-- bottom blog end -->
@@ -796,13 +817,13 @@
             <ul>
               <li>
                 <span>Адрес:</span>
-												<span>г. Москва<br>
+                <span>г. Москва<br>
 									ул. Красная Площадь, д. 1<br>
 									Лично</span>
               </li>
               <li>
                 <span>Телефоны:</span>
-												<span>
+                <span>
 										+7 (999) 999-99-99 - Менеджер по безысходности<br>
 									</span>
               </li>
@@ -817,13 +838,13 @@
             <ul>
               <li class="cc-space">
                 <span>Email:</span>
-												<span><a href="#">support@sitename.com</a> <br/>
+                <span><a href="#">support@sitename.com</a> <br/>
 									<a href="#">info@sitename.com</a></span>
                 <div class="su-spacer"></div>
               </li>
               <li>
                 <span>Социальные сети:</span>
-												<span>
+                <span>
 										<a href="#"><i class="fa fa-facebook"></i></a>
 										<a href="#"><i class="fa fa-linkedin-square"></i></a>
 										<a href="#"><i class="fa fa-google-plus"></i></a>
@@ -867,7 +888,6 @@
   </div>
   <!-- footer-bottom-area end -->
 </footer>
-<!-- footer end -->
 <!-- footer end -->
 
 <!-- JS -->
