--- a/about-us.html
+++ b/about-us.html
@@ -66,7 +66,7 @@
   ============================================ -->
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
-<body>
+<body class="about-page">
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
   your browser</a> to improve your experience.</p>
@@ -130,7 +130,7 @@
                   </ul>
                 </li>
                 <li><a href="#">Автопарк</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
           </div>
@@ -189,7 +189,7 @@
                   </ul>
                 </li>
                 <li><a href="#">Автопарк</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
           </div>
@@ -220,16 +220,24 @@
   </div>
 </div>
 <!-- breadcrumb-area end -->
-<!-- about-intensy-area start -->
-<div class="about-intensy-area">
+<!-- creative-intensy-area start -->
+<div class="creative-intensy-area fix">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-6 col-sm-offset-3 col-md-offset-3">
+      <!-- creative-img start -->
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 hidden-sm creative-intensy-area__flex-item">
+        <div class="creative-img">
+          <img src="img/creative/top_b_2.png" alt=""/>
+        </div>
+      </div>
+      <!-- creative-img end -->
+      <!-- creative-text start -->
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
         <div class="about-intensy-text">
           <h1 class="about-intensy-title">Добро пожаловать в <strong>GTrans</strong></h1>
           <p>Мы считаем, что качественные услуги во всех областях должны быть доступны каждому, в том числе и в вопросах перевозок. На деле же выбор хорошей транспортной компании может затянуться буквально на целую вечность. Где-то отзывы негативные или их вообще нет, эта компания на грани банкротства и с ней не стоит связываться, иной же раз без слёз невозможно смотреть на автопарк - настолько он уставший и негодный к эксплуатации. </p>
           <p>В компании GTrans основательно подошли к делу - мы предлагает только лучший сервис по доступным ценам. Современные автовозы проходят регулярное техническое обслуживания и предрейсовые осмотры для того, чтобы вы могли быть уверены в безопасности и своевременной доставке вашего автомоблия. Профессиональные менеджеры всегда готовы помочь разобраться с тонкостями перевозок, подсказать по тарифам, оформить страховой полис. Самое же главное - наши клиенты всегда положительно отзываются об услугах компании, мы стараемся идти на встречу каждому заказчику. </p>
-          <p>Что вы получаете, обратившись к нам:</p>
+          <h3>Что вы получаете, обратившись к нам:</h3>
           <ul>
             <li>Персональный подход и гибкие тарифы</li>
             <li>Команду профессионалов с большим опытом работы</li>
@@ -237,10 +245,9 @@
           </ul>
         </div>
       </div>
-    </div>
   </div>
 </div>
-<!-- about-intensy-area end -->
+<!-- creative-intensy-area end -->
 <!-- counter-area start -->
 <div class="home-4">
   <div class="counter-area fix">
@@ -443,7 +450,7 @@
                 <li><a href="#">Услуги</a></li>
                 <li><a href="#">Направления</a></li>
                 <li><a href="#">Автопарк</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
           </div>
