--- a/directions.html
+++ b/directions.html
@@ -101,9 +101,42 @@
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
                 <li><a href="#">Услуги</a></li>
-                <li><a href="#">Направления</a></li>
+                <li><a href="#">Направления</a>
+                  <ul class="sub-menu">
+                    <li><a href="moscow-spb.html">Москва - Санкт-Петербург</a></li>
+                    <li><a href="#">Москва - Нижний Новгород</a></li>
+                    <li><a href="#">Москва - Уфа</a></li>
+                    <li><a href="#">Москва - Казань</a></li>
+                    <li><a href="#">Москва - Ростов-на-Дону</a></li>
+                    <li><a href="#">Москва - Челябинск</a></li>
+                    <li><a href="#">Москва - Калининград</a></li>
+                    <li><a href="#">Москва - Краснодар</a></li>
+                    <li><a href="#">Москва - Сургут</a></li>
+                    <li><a href="#">Москва - Новосибирск</a></li>
+                    <li><a href="#">Москва - Екатеринбург</a></li>
+                    <li><a href="#">Москва - Иркутск</a></li>
+                    <li><a href="#">Москва - Хабаровск</a></li>
+                    <li><a href="#">Москва - Владикавказ</a></li>
+                    <li><a href="#">Москва - Махачкала</a></li>
+                    <li><a href="moscow-spb.html">Санкт-Петербург - Москва</a></li>
+                    <li><a href="#">Нижний Новгород - Москва</a></li>
+                    <li><a href="#">Уфа - Москва</a></li>
+                    <li><a href="#">Казань - Москва</a></li>
+                    <li><a href="#">Ростов-на-Дону - Москва</a></li>
+                    <li><a href="#">Челябинск - Москва</a></li>
+                    <li><a href="#">Калининград - Москва</a></li>
+                    <li><a href="#">Краснодар - Москва</a></li>
+                    <li><a href="#">Сургут - Москва</a></li>
+                    <li><a href="#">Новосибирск - Москва</a></li>
+                    <li><a href="#">Екатеринбург - Москва</a></li>
+                    <li><a href="#">Иркутск - Москва</a></li>
+                    <li><a href="#">Хабаровск - Москва</a></li>
+                    <li><a href="#">Владикавказ - Москва</a></li>
+                    <li><a href="#">Махачкала - Москва</a></li>
+                  </ul>
+                </li>
                 <li><a href="#">Автопарк</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
           </div>
@@ -129,7 +162,7 @@
                 <li><a href="#">Услуги</a></li>
                 <li><a href="#">Направления</a>
                   <ul class="sub-menu">
-                    <li><a href="#">Москва - Санкт-Петербург</a></li>
+                    <li><a href="moscow-spb.html">Москва - Санкт-Петербург</a></li>
                     <li><a href="#">Москва - Нижний Новгород</a></li>
                     <li><a href="#">Москва - Уфа</a></li>
                     <li><a href="#">Москва - Казань</a></li>
@@ -144,7 +177,7 @@
                     <li><a href="#">Москва - Хабаровск</a></li>
                     <li><a href="#">Москва - Владикавказ</a></li>
                     <li><a href="#">Москва - Махачкала</a></li>
-                    <li><a href="#">Санкт-Петербург - Москва</a></li>
+                    <li><a href="moscow-spb.html">Санкт-Петербург - Москва</a></li>
                     <li><a href="#">Нижний Новгород - Москва</a></li>
                     <li><a href="#">Уфа - Москва</a></li>
                     <li><a href="#">Казань - Москва</a></li>
@@ -162,7 +195,7 @@
                   </ul>
                 </li>
                 <li><a href="#">Автопарк</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
           </div>
@@ -216,7 +249,7 @@
       <div class="awesome-portfolio-content">
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all fromMoscow szfo">
-          <a href="index.html" data-fancybox-group="group">
+          <a href="moscow-spb.html" data-fancybox-group="group">
             <div class="awesome-img">
               <img src="img/icons/route.svg" alt="" width="130">
               <h3>Подробнее</h3>
@@ -456,7 +489,7 @@
         <!-- single-awesome-portfolio end -->
         <!-- single-awesome-portfolio start -->
         <div class="single-awesome-portfolio mix all toMoscow szfo">
-          <a href="index.html" data-fancybox-group="group">
+          <a href="moscow-spb.html" data-fancybox-group="group">
             <div class="awesome-img">
               <img src="img/icons/route.svg" alt="" width="130">
               <h3>Подробнее</h3>
@@ -776,7 +809,7 @@
                 <li><a href="#">Услуги</a></li>
                 <li><a href="#">Направления</a></li>
                 <li><a href="#">Автопарк</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
           </div>
