--- a/moscow-spb.html
+++ b/moscow-spb.html
@@ -131,7 +131,7 @@
                   </ul>
                 </li>
                 <li><a href="#">Автопарк</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
           </div>
@@ -190,7 +190,7 @@
                   </ul>
                 </li>
                 <li><a href="#">Автопарк</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
           </div>
@@ -210,7 +210,7 @@
         <li data-transition="random" data-slotamount="7" data-masterspeed="300" data-thumb="img/slider/slider-4/bg2.jpg"
             data-saveperformance="off" data-title="Slide1">
           <!-- MAIN IMAGE -->
-          <img src="img/slider/slider-4/bg2.jpg" alt="bg" data-bgposition="center top" data-bgfit="cover"
+          <img src="img/slider/slider-4/bg3.jpg" alt="bg" data-bgposition="center top" data-bgfit="cover"
                data-bgrepeat="no-repeat">
           <!-- LAYERS -->
           <!-- LAYER NR. 1 -->
@@ -293,7 +293,7 @@
         <li data-transition="random" data-slotamount="7" data-masterspeed="300" data-thumb="img/slider/slider-4/bg1.jpg"
             data-saveperformance="off" data-title="Slide1">
           <!-- MAIN IMAGE -->
-          <img src="img/slider/slider-4/bg1.jpg" alt="bg" data-bgposition="center top" data-bgfit="cover"
+          <img src="img/slider/slider-4/bg2.jpg" alt="bg" data-bgposition="center top" data-bgfit="cover"
                data-bgrepeat="no-repeat">
           <!-- LAYERS -->
 
@@ -878,7 +878,7 @@
                 <li><a href="#">Услуги</a></li>
                 <li><a href="#">Направления</a></li>
                 <li><a href="#">Автопарк</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
           </div>
