--- a/product.html
+++ b/product.html
@@ -106,7 +106,7 @@
 										<ul class="sub-menu">
 											<li><a href="index-2.html">Homepage Version 2</a></li>
 											<li><a href="index-3.html">Homepage Version 3</a></li>
-											<li><a href="index-4.html">Homepage Version 4</a></li>
+											<li><a href="moscow-spb.html">Homepage Version 4</a></li>
 										</ul>
 									</li>
 									
@@ -273,7 +273,7 @@
 										<ul>
 											<li><a href="index-2.html">Home 2</a></li>
 											<li><a href="index-3.html">Home 3</a></li>
-											<li><a href="index-4.html">Home 4</a></li>
+											<li><a href="moscow-spb.html">Home 4</a></li>
 										</ul>
 									</li>
 									<li><a href="blog.html">blog</a>
