--- a/contact-us.html
+++ b/contact-us.html
@@ -131,7 +131,7 @@
                   </ul>
                 </li>
                 <li><a href="#">Автопарк</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
           </div>
@@ -190,7 +190,7 @@
                   </ul>
                 </li>
                 <li><a href="#">Автопарк</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
           </div>
@@ -228,77 +228,36 @@
     <div class="row">
       <!-- contact-accordion start -->
       <div class="col-lg-8 col-md-8 col-sm-12">
-        <h2 class="contact-name">Selim Rana</h2>
+        <h2 class="contact-name">Форма заявки</h2>
         <div class="contact-accordion">
-          <!-- accordion start -->
-          <h3 class="open">Contact</h3>
-          <div class="contact-content">
-            <div class="contact-address">
-              <p>Chief Executive Officer</p>
-              <ul class="footer-top-contact">
-                <li>
-                  <span class="contact-icon"><i class="fa fa-home"></i></span>
-                  <span class="contact-text">46/1 west malibagh , <br/> Dhaka,<br/>BD <br/>5800 <br/> Bangladesh</span>
-                </li>
-                <li>
-                  <span class="contact-icon"><i class="fa fa-phone-square"></i></span>
-                  <span class="contact-text">+880-1737803547 </span>
-                </li>
-                <li>
-                  <span class="contact-icon"><i class="fa fa-print"></i></span>
-                  <span class="contact-text">1-212-555555-2 </span>
-                </li>
-                <li>
-                  <span class="contact-icon"><i class="fa fa-mobile"></i></span>
-                  <span class="contact-text">+880-1677818543</span>
-                </li>
-                <li>
-                  <span class="contact-icon"><i class="fa fa-link"></i></span>
-                  <span class="contact-text"><a
-                    href="http://www.bootexperts.com">www.bootexperts.com</a></span>
-                </li>
-              </ul>
-            </div>
-            <div class="contact-img">
-              <img src="img/team/c1.jpg" alt=""/>
-            </div>
-          </div>
-          <!-- accordion end -->
-          <!-- accordion start -->
-          <h3>Contact Form</h3>
           <div class="contact-content">
             <div class="contact-form-ac">
-              <p>Send an email. All fields with an * are required.</p>
-              <form action="#">
+              <p>Отправить заявку на перевозку</p>
+              <p class="small-text">* - обязательные поля</p>
+              <form>
                 <div class="row">
                   <div class="col-md-4 col-sm-4">
                     <div class="control-level">
-                      <p><span>Name</span> *</p>
-                      <input type="text"/>
+                      <label class="form-label" for="name"><span>Ваши имя</span> *</label>
+                      <input id="name" name="name" type="text"/>
                     </div>
                   </div>
                   <div class="col-md-4 col-sm-4">
                     <div class="control-level">
-                      <p><span>Email</span> *</p>
-                      <input type="email"/>
+                      <label class="form-label" for="phone"><span>Телефон</span> *</label>
+                      <input id="phone" name="phone" type="tel"/>
                     </div>
                   </div>
                   <div class="col-md-4 col-sm-4">
                     <div class="control-level">
-                      <p><span>Subject</span> *</p>
-                      <input type="text"/>
+                      <label class="form-label" for="email"><span>Email</span></label>
+                      <input id="email" name="email" type="email"/>
                     </div>
                   </div>
                   <div class="col-md-12 col-sm-12">
                     <div class="textarea-contact">
-                      <p><span>Message</span> *</p>
-                      <textarea id="message-ac" cols="30" rows="10"></textarea>
-                    </div>
-                  </div>
-                  <div class="col-md-12 col-sm-12">
-                    <div class="contact_email_copy">
-                      <input type="checkbox"/>
-                      <p>Send copy to yourself</p>
+                      <label  class="form-label" for="textfield"><span>Message</span></label>
+                      <textarea class="textfield" id="textfield" cols="30" rows="10"></textarea>
                     </div>
                   </div>
                   <div class="col-md-12 col-sm-12">
@@ -311,23 +270,21 @@
             </div>
           </div>
           <!-- accordion end -->
-          <!-- accordion start -->
-          <h3>Miscellaneous Information</h3>
-          <div class="contact-content">
-            <div class="contact-info">
-              <p>Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por
-                scientie, musica, sport etc, litot Europa usa li sam vocabular.</p>
-            </div>
-          </div>
-          <!-- accordion end -->
+
         </div>
       </div>
       <!-- contact-accordion end -->
       <!-- contact-map start -->
       <div class="col-lg-4 col-md-4 col-sm-12">
-        <div class="contact-map">
-          <h3>We are located</h3>
-          <div id="googleMap" style="width:100%;height:430px;"></div>
+        <div class="office-map">
+          <h3 class="heading-inner"><strong>Наше </strong>местоположение</h3>
+          <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=gwZz_g2YipSbPTo3QPn2DpJeotrH3JjD&amp;width=100%25&amp;height=240&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
+          <h4>Московская область, г. Химки</h4>
+          <ul>
+            <li><span><i class="fa fa-home"></i></span>ул. Рабочая, 2а, к. 22</li>
+            <li><span><i class="fa fa-phone"></i></span>8 (800) 999 99 99</li>
+            <li><span><i class="fa fa-envelope-o"></i></span><a href="mailto:info@gtrans.group">info@gtrans.group</a></li>
+          </ul>
         </div>
       </div>
       <!-- contact-map end -->
@@ -474,31 +431,6 @@
 <script type="text/javascript" src="lib/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
 <script src="lib/rs-plugin/rs.home.js"></script>
 
-<!-- Google Map js -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuU_0_uLMnFM-2oWod_fzC0atPZj7dHlU"></script>
-<script>
-  function initialize() {
-    var mapOptions = {
-      zoom: 15,
-      scrollwheel: false,
-      center: new google.maps.LatLng(40.663293, -73.956351)
-    };
-
-    var map = new google.maps.Map(document.getElementById('googleMap'),
-      mapOptions);
-
-
-    var marker = new google.maps.Marker({
-      position: map.getCenter(),
-      animation: google.maps.Animation.BOUNCE,
-      icon: 'img/map-marker.png',
-      map: map
-    });
-
-  }
-
-  google.maps.event.addDomListener(window, 'load', initialize);
-</script>
 
 <!-- wow js -->
 <script src="js/wow.js"></script>
