--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <li><a href="#">Услуги</a></li>
                 <li><a href="directions.html">Направления</a>
                   <ul class="sub-menu">
-                    <li><a href="index-4.html">Москва - Санкт-Петербург</a></li>
+                    <li><a href="moscow-spb.html">Москва - Санкт-Петербург</a></li>
                     <li><a href="#">Москва - Нижний Новгород</a></li>
                     <li><a href="#">Москва - Уфа</a></li>
                     <li><a href="#">Москва - Казань</a></li>
@@ -112,7 +112,7 @@
                     <li><a href="#">Москва - Хабаровск</a></li>
                     <li><a href="#">Москва - Владикавказ</a></li>
                     <li><a href="#">Москва - Махачкала</a></li>
-                    <li><a href="index-4.html">Санкт-Петербург - Москва</a></li>
+                    <li><a href="moscow-spb.html">Санкт-Петербург - Москва</a></li>
                     <li><a href="#">Нижний Новгород - Москва</a></li>
                     <li><a href="#">Уфа - Москва</a></li>
                     <li><a href="#">Казань - Москва</a></li>
@@ -130,7 +130,7 @@
                   </ul>
                 </li>
                 <li><a href="#">Автопарк</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
           </div>
@@ -154,9 +154,9 @@
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
                 <li><a href="#">Услуги</a></li>
-                <li><a href="#">Направления</a>
+                <li><a href="directions.html">Направления</a>
                   <ul class="sub-menu">
-                    <li><a href="#">Москва - Санкт-Петербург</a></li>
+                    <li><a href="moscow-spb.html">Москва - Санкт-Петербург</a></li>
                     <li><a href="#">Москва - Нижний Новгород</a></li>
                     <li><a href="#">Москва - Уфа</a></li>
                     <li><a href="#">Москва - Казань</a></li>
@@ -171,7 +171,7 @@
                     <li><a href="#">Москва - Хабаровск</a></li>
                     <li><a href="#">Москва - Владикавказ</a></li>
                     <li><a href="#">Москва - Махачкала</a></li>
-                    <li><a href="#">Санкт-Петербург - Москва</a></li>
+                    <li><a href="moscow-spb.html">Санкт-Петербург - Москва</a></li>
                     <li><a href="#">Нижний Новгород - Москва</a></li>
                     <li><a href="#">Уфа - Москва</a></li>
                     <li><a href="#">Казань - Москва</a></li>
@@ -189,7 +189,7 @@
                   </ul>
                 </li>
                 <li><a href="#">Автопарк</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
           </div>
@@ -835,8 +835,8 @@
       <h3><a href="#">Перевозка автомобилей</a></h3>
       <p>Мы профессионально занимаемся перевозкой любых автотранспортных средств - седанов, универсалов, хэтчбеков,
         купе, кабриолетов, внедорожников, пикапов, паркетников, любого коммерческого транспорта, микроавтобусов,
-        автобусов и грузовых автомобилей. Наше техническое оснащение позволяет максимально безопасно закреплять ваше
-        транспортное средство на прицепе, что гарантирует своевременную доставку и полную сохранность. </p>
+        автобусов и грузовых автомобилей.<span class="hidden-text"> Наше техническое оснащение позволяет максимально безопасно закреплять ваше
+        транспортное средство на прицепе, что гарантирует своевременную доставку и полную сохранность.</span> </p>
     </div>
   </div>
   <div class="latest-blog-desc">
@@ -845,8 +845,8 @@
       <span class="image-over-style"></span>
     </a>
     <div class="latest-blog-info">
-      <h3><a href="#">Перевозка мото и водного транспорта</a></h3>
-      <p>Возможности нашей компании не ограничиваются транспортировкой автомобилей, мы также поможем вам перевезти любой вид транспорта, будь то мотоцикл, квадроцикл, моторная лодка, катер, огромная яхта или даже вертолёт. В нашем распоряжении все необходимые технические средства для правилього закрепления груза на платформе прицепа, а значит транспортировка пройдёт максимально безопасно. </p>
+      <h3><a href="#">Перевозка транспорта</a></h3>
+      <p>Возможности нашей компании не ограничиваются транспортировкой автомобилей, мы также поможем вам перевезти любой вид транспорта, будь то мотоцикл, квадроцикл, моторная лодка, катер, огромная яхта или даже вертолёт. <span class="hidden-text">В нашем распоряжении все необходимые технические средства для правилього закрепления груза на платформе прицепа, а значит транспортировка пройдёт максимально безопасно. </span></p>
     </div>
   </div>
   <!-- top blog end -->
@@ -858,7 +858,7 @@
     </a>
     <div class="latest-blog-info">
       <h3><a href="#">Отслеживание</a></h3>
-      <p>Глобальные системы позиционирования прочно заняли свое место в области автотранспорта - без них не обходится сейчас, пожалуй, ни одна область этого бизнеса. Отслеживание грузов позволяет всегда быть в курсе событий и точно знать дату прибытия груза к месту назначения. Наша компания использует все самые передовые технологии в области позиционирования - на данный момент ключевыми системами являются GPS и ГЛОНАСС. </p>
+      <p>Глобальные системы позиционирования прочно заняли свое место в области автотранспорта - без них не обходится сейчас, пожалуй, ни одна область этого бизнеса. Отслеживание грузов позволяет всегда быть в курсе событий и точно знать дату прибытия груза к месту назначения. <span class="hidden-text">Наша компания использует все самые передовые технологии в области позиционирования - на данный момент ключевыми системами являются GPS и ГЛОНАСС. </span></p>
     </div>
   </div>
   <div class="latest-blog-desc">
@@ -868,7 +868,7 @@
     </a>
     <div class="latest-blog-info">
       <h3><a href="#">Страхование</a></h3>
-      <p>Для уверенности в полной сохранности отправления вы можете оформить страховой полис, покрывающий все возможные риски, возникающие при транспортировке. Наши специалисты помогут вам правильно подобрать программу страхования, рассчитают тарифы и подготовят необходимый комплект документов. </p>
+      <p>Для уверенности в полной сохранности отправления вы можете оформить страховой полис, покрывающий все возможные риски, возникающие при транспортировке. <span class="hidden-text">Наши специалисты помогут вам правильно подобрать программу страхования, рассчитают тарифы и подготовят необходимый комплект документов. </span></p>
     </div>
   </div>
   <!-- bottom blog end -->
@@ -977,9 +977,9 @@
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
                 <li><a href="#">Услуги</a></li>
-                <li><a href="#">Направления</a></li>
+                <li><a href="directions.html">Направления</a></li>
                 <li><a href="#">Автопарк</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="contact-us.html">Контакты</li>
               </ul>
             </nav>
           </div>
