--- a/directions.html
+++ b/directions.html
@@ -104,35 +104,35 @@
                 <li><a href="#">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="moscow-spb.html">Москва - Санкт-Петербург</a></li>
-                    <li><a href="#">Москва - Нижний Новгород</a></li>
-                    <li><a href="#">Москва - Уфа</a></li>
-                    <li><a href="#">Москва - Казань</a></li>
-                    <li><a href="#">Москва - Ростов-на-Дону</a></li>
-                    <li><a href="#">Москва - Челябинск</a></li>
-                    <li><a href="#">Москва - Калининград</a></li>
-                    <li><a href="#">Москва - Краснодар</a></li>
-                    <li><a href="#">Москва - Сургут</a></li>
-                    <li><a href="#">Москва - Новосибирск</a></li>
-                    <li><a href="#">Москва - Екатеринбург</a></li>
-                    <li><a href="#">Москва - Иркутск</a></li>
-                    <li><a href="#">Москва - Хабаровск</a></li>
-                    <li><a href="#">Москва - Владикавказ</a></li>
-                    <li><a href="#">Москва - Махачкала</a></li>
+                    <li><a href="moscow-nn.html">Москва - Нижний Новгород</a></li>
+                    <li><a href="moscow-ufa.html">Москва - Уфа</a></li>
+                    <li><a href="moscow-kazan.html">Москва - Казань</a></li>
+                    <li><a href="moscow-rnd.html">Москва - Ростов-на-Дону</a></li>
+                    <li><a href="moscow-chelyab.html">Москва - Челябинск</a></li>
+                    <li><a href="moscow-kaliningrad.html">Москва - Калининград</a></li>
+                    <li><a href="moscow-krasnodar.html">Москва - Краснодар</a></li>
+                    <li><a href="moscow-surgut.html">Москва - Сургут</a></li>
+                    <li><a href="moscow-novosib.html">Москва - Новосибирск</a></li>
+                    <li><a href="moscow-ekb.html">Москва - Екатеринбург</a></li>
+                    <li><a href="moscow-irkutsk.html">Москва - Иркутск</a></li>
+                    <li><a href="moscow-khabarovsk.html">Москва - Хабаровск</a></li>
+                    <li><a href="moscow-vladikavkaz.html">Москва - Владикавказ</a></li>
+                    <li><a href="moscow-mahachkala.html">Москва - Махачкала</a></li>
                     <li><a href="moscow-spb.html">Санкт-Петербург - Москва</a></li>
-                    <li><a href="#">Нижний Новгород - Москва</a></li>
-                    <li><a href="#">Уфа - Москва</a></li>
-                    <li><a href="#">Казань - Москва</a></li>
-                    <li><a href="#">Ростов-на-Дону - Москва</a></li>
-                    <li><a href="#">Челябинск - Москва</a></li>
-                    <li><a href="#">Калининград - Москва</a></li>
-                    <li><a href="#">Краснодар - Москва</a></li>
-                    <li><a href="#">Сургут - Москва</a></li>
-                    <li><a href="#">Новосибирск - Москва</a></li>
-                    <li><a href="#">Екатеринбург - Москва</a></li>
-                    <li><a href="#">Иркутск - Москва</a></li>
-                    <li><a href="#">Хабаровск - Москва</a></li>
-                    <li><a href="#">Владикавказ - Москва</a></li>
-                    <li><a href="#">Махачкала - Москва</a></li>
+                    <li><a href="moscow-nn.html">Нижний Новгород - Москва</a></li>
+                    <li><a href="moscow-ufa.html">Уфа - Москва</a></li>
+                    <li><a href="moscow-kazan.html">Казань - Москва</a></li>
+                    <li><a href="moscow-rnd.html">Ростов-на-Дону - Москва</a></li>
+                    <li><a href="moscow-chelyab.html">Челябинск - Москва</a></li>
+                    <li><a href="moscow-kaliningrad.html">Калининград - Москва</a></li>
+                    <li><a href="moscow-krasnodar.html">Краснодар - Москва</a></li>
+                    <li><a href="moscow-surgut.html">Сургут - Москва</a></li>
+                    <li><a href="moscow-novosib.html">Новосибирск - Москва</a></li>
+                    <li><a href="moscow-ekb.html">Екатеринбург - Москва</a></li>
+                    <li><a href="moscow-irkutsk.html">Иркутск - Москва</a></li>
+                    <li><a href="moscow-khabarovsk.html">Хабаровск - Москва</a></li>
+                    <li><a href="moscow-vladikavkaz.html">Владикавказ - Москва</a></li>
+                    <li><a href="moscow-mahachkala.html">Махачкала - Москва</a></li>
                   </ul>
                 </li>
                 <li><a href="#">Автопарк</a></li>
@@ -163,35 +163,35 @@
                 <li><a href="#">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="moscow-spb.html">Москва - Санкт-Петербург</a></li>
-                    <li><a href="#">Москва - Нижний Новгород</a></li>
-                    <li><a href="#">Москва - Уфа</a></li>
-                    <li><a href="#">Москва - Казань</a></li>
-                    <li><a href="#">Москва - Ростов-на-Дону</a></li>
-                    <li><a href="#">Москва - Челябинск</a></li>
-                    <li><a href="#">Москва - Калининград</a></li>
-                    <li><a href="#">Москва - Краснодар</a></li>
-                    <li><a href="#">Москва - Сургут</a></li>
-                    <li><a href="#">Москва - Новосибирск</a></li>
-                    <li><a href="#">Москва - Екатеринбург</a></li>
-                    <li><a href="#">Москва - Иркутск</a></li>
-                    <li><a href="#">Москва - Хабаровск</a></li>
-                    <li><a href="#">Москва - Владикавказ</a></li>
-                    <li><a href="#">Москва - Махачкала</a></li>
+                    <li><a href="moscow-nn.html">Москва - Нижний Новгород</a></li>
+                    <li><a href="moscow-ufa.html">Москва - Уфа</a></li>
+                    <li><a href="moscow-kazan.html">Москва - Казань</a></li>
+                    <li><a href="moscow-rnd.html">Москва - Ростов-на-Дону</a></li>
+                    <li><a href="moscow-chelyab.html">Москва - Челябинск</a></li>
+                    <li><a href="moscow-kaliningrad.html">Москва - Калининград</a></li>
+                    <li><a href="moscow-krasnodar.html">Москва - Краснодар</a></li>
+                    <li><a href="moscow-surgut.html">Москва - Сургут</a></li>
+                    <li><a href="moscow-novosib.html">Москва - Новосибирск</a></li>
+                    <li><a href="moscow-ekb.html">Москва - Екатеринбург</a></li>
+                    <li><a href="moscow-irkutsk.html">Москва - Иркутск</a></li>
+                    <li><a href="moscow-khabarovsk.html">Москва - Хабаровск</a></li>
+                    <li><a href="moscow-vladikavkaz.html">Москва - Владикавказ</a></li>
+                    <li><a href="moscow-mahachkala.html">Москва - Махачкала</a></li>
                     <li><a href="moscow-spb.html">Санкт-Петербург - Москва</a></li>
-                    <li><a href="#">Нижний Новгород - Москва</a></li>
-                    <li><a href="#">Уфа - Москва</a></li>
-                    <li><a href="#">Казань - Москва</a></li>
-                    <li><a href="#">Ростов-на-Дону - Москва</a></li>
-                    <li><a href="#">Челябинск - Москва</a></li>
-                    <li><a href="#">Калининград - Москва</a></li>
-                    <li><a href="#">Краснодар - Москва</a></li>
-                    <li><a href="#">Сургут - Москва</a></li>
-                    <li><a href="#">Новосибирск - Москва</a></li>
-                    <li><a href="#">Екатеринбург - Москва</a></li>
-                    <li><a href="#">Иркутск - Москва</a></li>
-                    <li><a href="#">Хабаровск - Москва</a></li>
-                    <li><a href="#">Владикавказ - Москва</a></li>
-                    <li><a href="#">Махачкала - Москва</a></li>
+                    <li><a href="moscow-nn.html">Нижний Новгород - Москва</a></li>
+                    <li><a href="moscow-ufa.html">Уфа - Москва</a></li>
+                    <li><a href="moscow-kazan.html">Казань - Москва</a></li>
+                    <li><a href="moscow-rnd.html">Ростов-на-Дону - Москва</a></li>
+                    <li><a href="moscow-chelyab.html">Челябинск - Москва</a></li>
+                    <li><a href="moscow-kaliningrad.html">Калининград - Москва</a></li>
+                    <li><a href="moscow-krasnodar.html">Краснодар - Москва</a></li>
+                    <li><a href="moscow-surgut.html">Сургут - Москва</a></li>
+                    <li><a href="moscow-novosib.html">Новосибирск - Москва</a></li>
+                    <li><a href="moscow-ekb.html">Екатеринбург - Москва</a></li>
+                    <li><a href="moscow-irkutsk.html">Иркутск - Москва</a></li>
+                    <li><a href="moscow-khabarovsk.html">Хабаровск - Москва</a></li>
+                    <li><a href="moscow-vladikavkaz.html">Владикавказ - Москва</a></li>
+                    <li><a href="moscow-mahachkala.html">Махачкала - Москва</a></li>
                   </ul>
                 </li>
                 <li><a href="#">Автопарк</a></li>
@@ -807,7 +807,7 @@
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
                 <li><a href="#">Услуги</a></li>
-                <li><a href="#">Направления</a></li>
+                <li><a href="directions.html">Направления</a></li>
                 <li><a href="#">Автопарк</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
