--- a/moscow-kazan.html
+++ b/moscow-kazan.html
@@ -5,7 +5,7 @@
   ============================================ -->
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>GTrans | Перевозка автомобилей из Москвы в Санкт-Петербург и обратно</title>
+  <title>GTrans | Перевозка автомобилей из Москвы в Казань и обратно</title>
   <meta name="description" content="">
 
   <!-- Mobile specific metas
@@ -254,7 +254,7 @@
                data-endelementdelay="0.1"
                data-endspeed="300"
                style="z-index: 9; max-width: auto; max-height: auto; white-space: nowrap;font-weight: 900; letter-spacing: 2px; padding: 0; font-size: 60px; text-transform: uppercase; color: #fff;">
-            Москва - Санкт-Петербург
+            Москва - Казань
           </div>
 
           <!-- LAYER NR. 4 -->
@@ -355,7 +355,7 @@
                data-endelementdelay="0.1"
                data-endspeed="300"
                style="z-index: 10; max-width: auto; max-height: auto; white-space: nowrap; font-size: 24; font-weight: bold;">
-            <p style="text-align:center;">На перевозку автомобилей из Москвы в Санкт-Петербург и обратно</p>
+            <p style="text-align:center;">На перевозку автомобилей из Москвы в Казань и обратно</p>
           </div>
           <!-- LAYER NR. 5 -->
           <div class="tp-caption sfb randomrotateout tp-resizeme rs-parallaxlevel-0 pad-slider"
