--- a/question-answers.html
+++ b/question-answers.html
@@ -167,7 +167,7 @@
 										<div class="mega-menu">
 											<span>
 												<a href="about-us.html">About Us</a>
-												<a href="pages/moscow-spb.html">Our Office</a>
+												<a href="pages/office.html">Our Office</a>
 												<a href="help-center.html">Help Center</a>
 												<a href="testimonial.html">Client & Testimonial </a>
 											</span>
@@ -287,7 +287,7 @@
 									<li><a href="#">Pages</a>
 										<ul>
 											<li><a href="about-us.html">About Us</a></li>
-											<li><a href="pages/moscow-spb.html">Our Office</a></li>
+											<li><a href="pages/office.html">Our Office</a></li>
 											<li><a href="help-center.html">Help Center</a></li>
 											<li><a href="testimonial.html">Client & Testimonial </a></li>
 											<li><a href="contact-us.html">Contact Us Page</a></li>
