--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <ul id="nav">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="#">Услуги</a></li>
+                <li><a href="service.html">Услуги</a></li>
                 <li><a href="directions.html">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="moscow-spb.html">Москва - Санкт-Петербург</a></li>
@@ -153,7 +153,7 @@
               <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="#">Услуги</a></li>
+                <li><a href="service.html">Услуги</a></li>
                 <li><a href="directions.html">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="moscow-spb.html">Москва - Санкт-Петербург</a></li>
@@ -976,7 +976,7 @@
               <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="#">Услуги</a></li>
+                <li><a href="service.html">Услуги</a></li>
                 <li><a href="directions.html">Направления</a></li>
                 <li><a href="#">Автопарк</a></li>
                 <li><a href="contact-us.html">Контакты</li>
