--- a/pricing.html
+++ b/pricing.html
@@ -61,7 +61,7 @@
 
   <!-- style CSS
   ============================================ -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <!-- responsive CSS
   ============================================ -->
